Fix profile fields overflow issue

--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -7,6 +7,9 @@
   font-size: 42px;
   line-height: 1.14;
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media screen and (max-width: 1150px) {
   .profile__user-name {
